[project]
requires-python = ">=3.11"

[tool.coverage.report]
fail_under = 100
omit = [
    "*/migrations/*",
]
show_missing = true
skip_covered = true

# I should replace this with ruff exclusively after updating my Neovim config.
[tool.isort]
profile = "black"
src_paths = ["journal"]

[tool.pytest.ini_options]
addopts = "--nomigrations --disable-socket"
DJANGO_SETTINGS_MODULE = "project.testing_settings"
filterwarnings = [
    # Enable warnings as errors.
    "error",
    # This warning is coming from dj-stripe 2.8.3.
    "ignore:.*The default scheme will be changed.*:PendingDeprecationWarning",
]
# This warning is coming from dj-stripe 2.5.1 (Example)
#    ignore:.*The providing_args argument is deprecated\..*:DeprecationWarning
#    ignore:.*The providing_args argument is deprecated\..*:PendingDeprecationWarning
testpaths = [
    "journal",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # bandit: Use of `assert` detected
    "S101",
]
